# grn-inference-simulation

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: config.yaml  objectives.yaml  simulation_config.yaml
data/10_sources/: simulation_metadata.csv
data/10_sources/data/: data_1.tsv
data/10_sources/nets/: network_1.tsv
data/20_sources/: simulation_metadata.csv
data/20_sources/data/: data_1.tsv
data/20_sources/nets/: network_1.tsv
data/5_sources/: simulation_metadata.csv
data/5_sources/data/: data_1.tsv
data/5_sources/nets/: network_1.tsv
r_scripts/: install_dependencies.R  simulate_data.R
results/: precision_metrics.csv
scripts/: generate_plots.py  generate_simulated_data.py  run_experiment.py
src/data/: loader.py  preprocessor.py  simulation_bridge.py
src/evaluation/: metrics.py
src/models/: inference.py
src/pipeline/: stages.py
src/utils/: config_manager.py  logger.py  parallel.py
